crates/pcbc/tests/snapshots/moved__both_issues_warnings.snap
---
source: crates/pcbc/tests/moved.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: `moved()` is deprecated and will be removed in a future release
    ╭─[ <TEMP_DIR>/board.zen:17:1 ]
 17 │moved("OLD_POWER_SUPPLY", "NEW_POWER_SUPPLY")
    │                      ╰─────────────────────── `moved()` is deprecated and will be removed in a future release

Warning: `moved()` is deprecated and will be removed in a future release
    ╭─[ <TEMP_DIR>/board.zen:20:1 ]
 20 │moved("NONEXISTENT_OLD", "NONEXISTENT_NEW")
    │                     ╰────────────────────── `moved()` is deprecated and will be removed in a future release

Warning: moved() references path 'OLD_POWER_SUPPLY' that still exists.
    ╭─[ <TEMP_DIR>/board.zen:17:7 ]
 17 │moved("OLD_POWER_SUPPLY", "NEW_POWER_SUPPLY")
    │               ╰───────── moved() references path 'OLD_POWER_SUPPLY' that still exists.

Warning: moved() references path 'NONEXISTENT_NEW' that doesn't exist.
    ╭─[ <TEMP_DIR>/board.zen:20:26 ]
 20 │moved("NONEXISTENT_OLD", "NONEXISTENT_NEW")
    │                                 ╰───────── moved() references path 'NONEXISTENT_NEW' that doesn't exist.

✓ board.zen (1 components)
