crates/pcbc/tests/snapshots/moved__new_component_missing_warning.snap
---
source: crates/pcb/tests/moved.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: moved() references path 'NEW_COMPONENT' that doesn't exist.
    ╭─[ <TEMP_DIR>/board.zen:17:24 ]
 17 │moved("OLD_COMPONENT", "NEW_COMPONENT")
    │                              ╰──────── moved() references path 'NEW_COMPONENT' that doesn't exist.

✓ board.zen (1 components)
