crates/pcbc/tests/snapshots/moved__old_component_still_exists_warning.snap
---
source: crates/pcbc/tests/moved.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: moved() references path 'OLD_RESISTOR' that still exists.
    ╭─[ <TEMP_DIR>/board.zen:32:7 ]
 32 │moved("OLD_RESISTOR", "NEW_RESISTOR")
    │             ╰─────── moved() references path 'OLD_RESISTOR' that still exists.

✓ board.zen (2 components)
