crates/pcbc/tests/snapshots/moved__valid_directive_no_warnings.snap
---
source: crates/pcbc/tests/moved.rs
expression: output
---
Command: pcbc build board.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Warning: `moved()` is deprecated and will be removed in a future release
    ╭─[ <TEMP_DIR>/board.zen:17:1 ]
 17 │moved("OLD_COMPONENT", "NEW_COMPONENT")
    │                   ╰──────────────────── `moved()` is deprecated and will be removed in a future release

✓ board.zen (1 components)
